# ferrea-libraries

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
k8s/: 0-namespace.yaml  1-configmap.yaml  1-deployment.yaml  2-secret.yaml  3-deployment.yaml  3-ingress.yaml  4-service.yaml
src/: app.py
src/definitions/: oas.yaml  paths.yaml  responses.yaml  schemas.yaml  tags.yaml
src/models/: library.py
src/operations/: db_libraries.py
src/routers/: libraries.py
